# transcriber

./: .deepsource.toml  .dockerignore  .envrc  .gitignore  .markdownlint.json  AGENTS.md  Dockerfile  Dockerfile.traefik  LICENSE  README.md  THIRD_PARTY_NOTICES.md  codex.md  compose.yaml  config.py  llms.txt  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py  summary.py  traefik.Dockerfile  transcription.py  translate.py  tts.py  utils.py
.codesight/: CODESIGHT.md  config.md  libs.md
.codesight/wiki/: index.md  log.md  overview.md
.devcontainer/: devcontainer.json
.do/: deploy.template.yaml
.github/: copilot-instructions.md  dependabot.yml  renovate.json
.github/workflows/: codeql.yml  docker-publish.yml  license-scan.yml  opencommit.yml  pixi-update-lockfiles.yml  update-lock-files.yml
.streamlit/: config.toml
src/: streamlit_app.py
src/.streamlit/: config.toml
