[project]
name = "transcriber"
version = "0.4.2"
description = "Transcriber & translator for audio files. Like Otter.ai but free and build with Gemini AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.2",
    "google-genai>=0.3.0",
    "replicate==1.0.7",
    "requests[socks]==2.32.5",
    "streamlit==1.51.0",
    "yt-dlp[default]==2025.10.22",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = true
python_version = "3.12"
exclude = ["temp.*"]

[tool.pylint]
disable = ["C0114", "C0116", "E0611", "C0301"]

[tool.ruff]
extend-exclude = ["temp"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "B",     # flake8-bugbear
    "I",     # isort
    "W",     # pycodestyle
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "PT",    # flake8-pytest-style
    "S",     # flake8-bandit
    "DTZ",   # flake8-datetimez
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "TID",   # flake8-tidy-imports
    "PTH",   # flake8-use-pathlib
    "PERF",  # Perflint
    "FURB",  # refurb
    "RUF",   # Ruff-specific rules
    "C90",   # mccabe
    "N",     # pep8-naming
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "CPY",   # flake8-copyright
    "C4",    # flake8-comprehensions
    "ICN",   # flake8-import-conventions
    "T20",   # flake8-print
    "RSE",   # flake8-raise
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "FIX",   # flake8-fixme
    "ERA",   # eradicate
    "PL",    # Pylint
    "FLY",   # flynt
    # "D",     # pydocstyle
    # "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "INT",   # flake8-gettext
    "PGH",   # pygrep-hooks
    "DOC",   # pydoclint
]
ignore = ["S603", "S607", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
